--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
   <div id="main-content">
-    <h1>Task Lister Lite™️</h1>
+    <h1>Boongus Creator 9000</h1>
 
-    <form id="create-task-form" action="" method="POST">
-      <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
-      <input type="submit" value="Create New Task">
+    <form id="createBoongusForm" action="" method="POST">
+      <label for="Create-Your-Boongus">Create Your Boongus:</label>
+      <input type="text" id="newBoongusDescription" name="new-boongus-description" placeholder="Boongus name">
+      <input type="submit" value="Create New Boongus">
     </form>
 
     <div id="list">
-      <h2>My Todos:</h2>
-      <ul id="tasks">
+      <h2>My Boongus:</h2>
+      <ul id="boongus">
       </ul>
     </div>
 
